--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -48,44 +48,44 @@
 <!-- Element 2 - ACCORDION -->
 
 <div class="space-y-3">
-  <!-- Item 1 -->
-  <details class="group rounded-lg border border-neutral-200 open:bg-indigo-50 open:border-indigo-300 transition-colors">
-    <summary class="flex cursor-pointer items-center justify-between gap-3 p-4 text-neutral-800 group-open:text-indigo-700">
-      <span class="font-medium">Section 1</span>
-      <svg class="h-4 w-4 shrink-0 transition-transform group-open:rotate-180 group-open:text-indigo-700" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-        <path d="M5.23 7.21a.75.75 0 0 1 1.06.02L10 10.94l3.71-3.71a.75.75 0 1 1 1.08 1.04l-4.25 4.25a.75.75 0 0 1-1.06 0L5.21 8.27a.75.75 0 0 1 .02-1.06z"/>
-      </svg>
-    </summary>
-    <div class="border-t border-indigo-100 p-4 text-sm text-neutral-700">
-      Your content here…
-    </div>
-  </details>
+    <!-- Item 1 -->
+    <details class="group rounded-lg border border-neutral-200 open:bg-indigo-50 open:border-indigo-300 transition-colors">
+        <summary class="flex cursor-pointer items-center justify-between gap-3 p-4 text-neutral-800 group-open:text-indigo-700">
+            <span class="font-medium">Section 1</span>
+            <svg class="h-4 w-4 shrink-0 transition-transform group-open:rotate-180 group-open:text-indigo-700" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+            <path d="M5.23 7.21a.75.75 0 0 1 1.06.02L10 10.94l3.71-3.71a.75.75 0 1 1 1.08 1.04l-4.25 4.25a.75.75 0 0 1-1.06 0L5.21 8.27a.75.75 0 0 1 .02-1.06z"/>
+            </svg>
+        </summary>
+        <div class="border-t border-indigo-100 p-4 text-sm text-neutral-700">
+            Your content here…
+        </div>
+    </details>
 
-  <!-- Item 2 -->
-  <details class="group rounded-lg border border-neutral-200 open:bg-indigo-50 open:border-indigo-300 transition-colors">
-    <summary class="flex cursor-pointer items-center justify-between gap-3 p-4 text-neutral-800 group-open:text-indigo-700">
-      <span class="font-medium">Section 2</span>
-      <svg class="h-4 w-4 shrink-0 transition-transform group-open:rotate-180 group-open:text-indigo-700" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-        <path d="M5.23 7.21a.75.75 0 0 1 1.06.02L10 10.94l3.71-3.71a.75.75 0 1 1 1.08 1.04l-4.25 4.25a.75.75 0 0 1-1.06 0L5.21 8.27a.75.75 0 0 1 .02-1.06z"/>
-      </svg>
-    </summary>
-    <div class="border-t border-indigo-100 p-4 text-sm text-neutral-700">
-      More content…
-    </div>
-  </details>
+    <!-- Item 2 -->
+    <details class="group rounded-lg border border-neutral-200 open:bg-indigo-50 open:border-indigo-300 transition-colors">
+        <summary class="flex cursor-pointer items-center justify-between gap-3 p-4 text-neutral-800 group-open:text-indigo-700">
+            <span class="font-medium">Section 2</span>
+            <svg class="h-4 w-4 shrink-0 transition-transform group-open:rotate-180 group-open:text-indigo-700" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+            <path d="M5.23 7.21a.75.75 0 0 1 1.06.02L10 10.94l3.71-3.71a.75.75 0 1 1 1.08 1.04l-4.25 4.25a.75.75 0 0 1-1.06 0L5.21 8.27a.75.75 0 0 1 .02-1.06z"/>
+            </svg>
+        </summary>
+        <div class="border-t border-indigo-100 p-4 text-sm text-neutral-700">
+            More content…
+        </div>
+    </details>
 
-  <!-- Item 3 -->
-  <details class="group rounded-lg border border-neutral-200 open:bg-indigo-50 open:border-indigo-300 transition-colors">
-    <summary class="flex cursor-pointer items-center justify-between gap-3 p-4 text-neutral-800 group-open:text-indigo-700">
-      <span class="font-medium">Section 3</span>
-      <svg class="h-4 w-4 shrink-0 transition-transform group-open:rotate-180 group-open:text-indigo-700" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-        <path d="M5.23 7.21a.75.75 0 0 1 1.06.02L10 10.94l3.71-3.71a.75.75 0 1 1 1.08 1.04l-4.25 4.25a.75.75 0 0 1-1.06 0L5.21 8.27a.75.75 0 0 1 .02-1.06z"/>
-      </svg>
-    </summary>
-    <div class="border-t border-indigo-100 p-4 text-sm text-neutral-700">
-      Even more content…
-    </div>
-  </details>
+    <!-- Item 3 -->
+    <details class="group rounded-lg border border-neutral-200 open:bg-indigo-50 open:border-indigo-300 transition-colors">
+        <summary class="flex cursor-pointer items-center justify-between gap-3 p-4 text-neutral-800 group-open:text-indigo-700">
+            <span class="font-medium">Section 3</span>
+            <svg class="h-4 w-4 shrink-0 transition-transform group-open:rotate-180 group-open:text-indigo-700" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+            <path d="M5.23 7.21a.75.75 0 0 1 1.06.02L10 10.94l3.71-3.71a.75.75 0 1 1 1.08 1.04l-4.25 4.25a.75.75 0 0 1-1.06 0L5.21 8.27a.75.75 0 0 1 .02-1.06z"/>
+            </svg>
+        </summary>
+        <div class="border-t border-indigo-100 p-4 text-sm text-neutral-700">
+            Even more content…
+        </div>
+    </details>
 </div>
 
 
@@ -200,87 +200,105 @@
     </div>
 </div>
 
-<div class="w-full flex justify-center resources-container-home">
-  <div class="grid grid-cols-6 gap-4">
-    <div class="col-span-4 col-start-2 container-w980">
-      <!-- ALWAYS 4 columns -->
-      <div class="grid grid-cols-4 gap-6 items-stretch">
-        
-        <!-- CARD 1 -->
-        <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-          <div class="mb-6 flex items-center justify-center">
-            <img class="card-img-top home-resources-images max-w-full h-auto"
-                 src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
-                 width="165" height="138">
-          </div>
-          <div class="card-body home-resources-body p-4">
-            <h5 class="card-title mb-3 text-center">
-              <a class="home-resources-title" href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
-            </h5>
-            <p class="card-text home-resources-text">{{ element_4.card_1_text }}</p>
-            <p class="mt-auto">
-              <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
-            </p>
-          </div>
-        </article>
 
-        <!-- CARD 2 -->
-        <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-          <div class="mb-6 flex items-center justify-center">
-            <img class="card-img-top home-resources-images max-w-full h-auto"
-                 src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}"
-                 width="165" height="138">
-          </div>
-          <div class="card-body home-resources-body p-4">
-            <h5 class="card-title mb-3 text-center">
-              <a class="home-resources-title" href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
-            </h5>
-            <p class="card-text home-resources-text">{{ element_4.card_2_text }}</p>
-            <p class="mt-auto">
-              <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
-            </p>
-          </div>
-        </article>
+<div class="relative grid grid-cols-4 grid-rows-4 gap-4 rounded-lg text-center font-mono text-sm leading-6 font-bold text-white">
+    <div class="absolute inset-0">
+        <div class="h-full rounded-lg border text-black/10 dark:text-white/12.5 bg-[size:8px_8px] bg-top-left bg-[image:repeating-linear-gradient(315deg,currentColor_0,currentColor_1px,transparent_0,transparent_50%)]"></div>
 
-        <!-- CARD 3 -->
-        <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-          <div class="mb-6 flex items-center justify-center">
-            <img class="card-img-top home-resources-images max-w-full h-auto"
-                 src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}"
-                 width="165" height="138">
-          </div>
-          <div class="card-body home-resources-body p-4">
-            <h5 class="card-title mb-3 text-center">
-              <a class="home-resources-title" href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
-            </h5>
-            <p class="card-text home-resources-text">{{ element_4.card_3_text }}</p>
-            <p class="mt-auto">
-              <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
-            </p>
-          </div>
-        </article>
-
-        <!-- CARD 4 -->
-        <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
-          <div class="mb-6 flex items-center justify-center">
-            <img class="card-img-top home-resources-images max-w-full h-auto"
-                 src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}"
-                 width="165" height="138">
-          </div>
-          <div class="card-body home-resources-body p-4">
-            <h5 class="card-title mb-3 text-center">
-              <a class="home-resources-title" href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
-            </h5>
-            <p class="card-text home-resources-text">{{ element_4.card_4_text }}</p>
-            <p class="mt-auto">
-              <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
-            </p>
-          </div>
-        </article>
-
-      </div>
     </div>
-  </div>
+    <div class="relative rounded-lg bg-fuchsia-500 p-4">01</div>
+    <div class="relative rounded-lg bg-fuchsia-500 p-4">02</div>
+    <div class="relative rounded-lg bg-fuchsia-500 p-4">03</div>
+    <div class="relative rounded-lg bg-fuchsia-500 p-4">04</div>
+    <div class="relative rounded-lg bg-fuchsia-500 p-4">05</div>
+    <div class="relative rounded-lg bg-fuchsia-500 p-4">06</div>
+    <div class="relative rounded-lg bg-fuchsia-500 p-4">07</div>
+    <div class="relative rounded-lg bg-fuchsia-500 p-4">08</div>
+    <div class="relative rounded-lg bg-fuchsia-500 p-4">09</div>
+
+</div>
+
+<div class="w-full flex justify-center resources-container-home">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2 container-w980">
+            <!-- ALWAYS 4 columns -->
+            <div class="grid grid-cols-4 gap-6 items-stretch">
+
+                <!-- CARD 1 -->
+                <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                    <div class="mb-6 flex items-center justify-center">
+                        <img class="card-img-top home-resources-images max-w-full h-auto"
+                             src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                             width="165" height="138">
+                    </div>
+                    <div class="card-body home-resources-body p-4">
+                        <h5 class="card-title mb-3 text-center">
+                            <a class="home-resources-title" href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                        </h5>
+                        <p class="card-text home-resources-text">{{ element_4.card_1_text }}</p>
+                        <p class="mt-auto">
+                            <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                        </p>
+                    </div>
+                </article>
+
+                <!-- CARD 2 -->
+                <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                    <div class="mb-6 flex items-center justify-center">
+                        <img class="card-img-top home-resources-images max-w-full h-auto"
+                             src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}"
+                             width="165" height="138">
+                    </div>
+                    <div class="card-body home-resources-body p-4">
+                        <h5 class="card-title mb-3 text-center">
+                            <a class="home-resources-title" href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
+                        </h5>
+                        <p class="card-text home-resources-text">{{ element_4.card_2_text }}</p>
+                        <p class="mt-auto">
+                            <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
+                        </p>
+                    </div>
+                </article>
+
+                <!-- CARD 3 -->
+                <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                    <div class="mb-6 flex items-center justify-center">
+                        <img class="card-img-top home-resources-images max-w-full h-auto"
+                             src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}"
+                             width="165" height="138">
+                    </div>
+                    <div class="card-body home-resources-body p-4">
+                        <h5 class="card-title mb-3 text-center">
+                            <a class="home-resources-title" href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
+                        </h5>
+                        <p class="card-text home-resources-text">{{ element_4.card_3_text }}</p>
+                        <p class="mt-auto">
+                            <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
+                        </p>
+                    </div>
+                </article>
+
+                <!-- CARD 4 -->
+                <article class="flex flex-col h-full rounded-2xl bg-white p-8 shadow-[0_20px_60px_-20px_rgba(2,6,23,0.2)] ring-1 ring-black/5">
+                    <div class="mb-6 flex items-center justify-center">
+                        <img class="card-img-top home-resources-images max-w-full h-auto"
+                             src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}"
+                             width="165" height="138">
+                    </div>
+                    <div class="card-body home-resources-body p-4">
+                        <h5 class="card-title mb-3 text-center">
+                            <a class="home-resources-title" href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
+                        </h5>
+                        <p class="card-text home-resources-text">{{ element_4.card_4_text }}</p>
+                        <p class="mt-auto">
+                            <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
+                        </p>
+                    </div>
+                </article>
+
+            </div>
+        </div>
+    </div>
 </div>
 
 
