--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -200,22 +200,28 @@
     </div>
 </div>
 
+<div class="w-full flex justify-center resources-container-home">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2 container-w980">
 
-<div class="relative grid grid-cols-4 grid-rows-4 gap-4 rounded-lg text-center font-mono text-sm leading-6 font-bold text-white">
-    <div class="absolute inset-0">
-        <div class="h-full rounded-lg border text-black/10 dark:text-white/12.5 bg-[size:8px_8px] bg-top-left bg-[image:repeating-linear-gradient(315deg,currentColor_0,currentColor_1px,transparent_0,transparent_50%)]"></div>
+            <div class="relative grid grid-cols-4 grid-rows-4 gap-4 rounded-lg text-center font-mono text-sm leading-6 font-bold text-white">
+                <div class="absolute inset-0">
+                    <div class="h-full rounded-lg border text-black/10 dark:text-white/12.5 bg-[size:8px_8px] bg-top-left bg-[image:repeating-linear-gradient(315deg,currentColor_0,currentColor_1px,transparent_0,transparent_50%)]"></div>
 
+                </div>
+                <div class="relative rounded-lg bg-fuchsia-500 p-4">01</div>
+                <div class="relative rounded-lg bg-fuchsia-500 p-4">02</div>
+                <div class="relative rounded-lg bg-fuchsia-500 p-4">03</div>
+                <div class="relative rounded-lg bg-fuchsia-500 p-4">04</div>
+                <div class="relative rounded-lg bg-fuchsia-500 p-4">05</div>
+                <div class="relative rounded-lg bg-fuchsia-500 p-4">06</div>
+                <div class="relative rounded-lg bg-fuchsia-500 p-4">07</div>
+                <div class="relative rounded-lg bg-fuchsia-500 p-4">08</div>
+                <div class="relative rounded-lg bg-fuchsia-500 p-4">09</div>
+
+            </div>
+        </div>
     </div>
-    <div class="relative rounded-lg bg-fuchsia-500 p-4">01</div>
-    <div class="relative rounded-lg bg-fuchsia-500 p-4">02</div>
-    <div class="relative rounded-lg bg-fuchsia-500 p-4">03</div>
-    <div class="relative rounded-lg bg-fuchsia-500 p-4">04</div>
-    <div class="relative rounded-lg bg-fuchsia-500 p-4">05</div>
-    <div class="relative rounded-lg bg-fuchsia-500 p-4">06</div>
-    <div class="relative rounded-lg bg-fuchsia-500 p-4">07</div>
-    <div class="relative rounded-lg bg-fuchsia-500 p-4">08</div>
-    <div class="relative rounded-lg bg-fuchsia-500 p-4">09</div>
-
 </div>
 
 <div class="w-full flex justify-center resources-container-home">
