--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -199,6 +199,14 @@
         </div>
     </div>
 </div>
+###
+
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+  <div class="rounded-lg border p-4">1</div>
+  <div class="rounded-lg border p-4">2</div>
+  <div class="rounded-lg border p-4">3</div>
+  <div class="rounded-lg border p-4">4</div>
+</div>
 
 AAAA
 <div class="w-full flex justify-center resources-container-home">
