deposition-process changes

--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -201,12 +201,31 @@
 </div>
 ###
 
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-  <div class="rounded-lg border p-4">1</div>
-  <div class="rounded-lg border p-4">2</div>
-  <div class="rounded-lg border p-4">3</div>
-  <div class="rounded-lg border p-4">4</div>
+<div class="w-full">
+  <div class="grid grid-cols-4 gap-6 items-stretch">
+    <article class="h-full rounded-xl border p-4">Card 1</article>
+    <article class="h-full rounded-xl border p-4">Card 2</article>
+    <article class="h-full rounded-xl border p-4">Card 3</article>
+    <article class="h-full rounded-xl border p-4">Card 4</article>
+  </div>
 </div>
+
+<div class="overflow-x-auto">
+  <div class="grid grid-cols-4 gap-6 min-w-[64rem]"> <!-- 4 × 16rem -->
+    <article class="h-full rounded-xl border p-4">Card 1 - 1</article>
+    <article class="h-full rounded-xl border p-4">Card 2 -2 </article>
+    <article class="h-full rounded-xl border p-4">Card 3 - 3</article>
+    <article class="h-full rounded-xl border p-4">Card 4 - 4</article>
+  </div>
+</div>
+
+<div class="flex flex-nowrap gap-6">
+  <div class="w-1/4">Card 1 -4</div>
+  <div class="w-1/4">Card 2 -4 </div>
+  <div class="w-1/4">Card 3 -  4</div>
+  <div class="w-1/4">Card 4 - 4</div>
+</div>
+
 
 AAAA
 <div class="w-full flex justify-center resources-container-home">
