deposition-process cards

--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -199,55 +199,20 @@
         </div>
     </div>
 </div>
-###
 
-<div class="w-full">
-  <div class="grid grid-cols-4 gap-6 items-stretch">
-    <article class="h-full rounded-xl border p-4">Card 1</article>
-    <article class="h-full rounded-xl border p-4">Card 2</article>
-    <article class="h-full rounded-xl border p-4">Card 3</article>
-    <article class="h-full rounded-xl border p-4">Card 4</article>
-  </div>
-</div>
-_______
-<div class="overflow-x-auto">
-  <div class="grid grid-cols-4 gap-6 min-w-[64rem]"> <!-- 4 × 16rem -->
-    <article class="h-full rounded-xl border p-4">Card 1 - 1</article>
-    <article class="h-full rounded-xl border p-4">Card 2 -2 </article>
-    <article class="h-full rounded-xl border p-4">Card 3 - 3</article>
-    <article class="h-full rounded-xl border p-4">Card 4 - 4</article>
-  </div>
-</div>
-::::::::::::::::::::::
-<div class="flex flex-nowrap gap-6">
-  <div class="w-1/4">Card 1 -4</div>
-  <div class="w-1/4">Card 2 -4 </div>
-  <div class="w-1/4">Card 3 -  4</div>
-  <div class="w-1/4">Card 4 - 4</div>
-</div>
-
-
-AAAA
+AAAA            ::::::::::::::::::::::
 <div class="w-full flex justify-center resources-container-home">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2 container-w980">
 
-            <div class="relative grid grid-cols-4 grid-rows-4 gap-4 rounded-lg text-center font-mono text-sm leading-6 font-bold text-white">
-                <div class="absolute inset-0">
-                    <div class="h-full rounded-lg border text-black/10 dark:text-white/12.5 bg-[size:8px_8px] bg-top-left bg-[image:repeating-linear-gradient(315deg,currentColor_0,currentColor_1px,transparent_0,transparent_50%)]"></div>
-
-                </div>
-                <div class="relative rounded-lg bg-fuchsia-500 p-4">01</div>
-                <div class="relative rounded-lg bg-fuchsia-500 p-4">02</div>
-                <div class="relative rounded-lg bg-fuchsia-500 p-4">03</div>
-                <div class="relative rounded-lg bg-fuchsia-500 p-4">04</div>
-                <div class="relative rounded-lg bg-fuchsia-500 p-4">05</div>
-                <div class="relative rounded-lg bg-fuchsia-500 p-4">06</div>
-                <div class="relative rounded-lg bg-fuchsia-500 p-4">07</div>
-                <div class="relative rounded-lg bg-fuchsia-500 p-4">08</div>
-                <div class="relative rounded-lg bg-fuchsia-500 p-4">09</div>
-
+            <div class="flex flex-nowrap gap-6">
+                <div class="w-1/4">Card 1 -4</div>
+                <div class="w-1/4">Card 2 -4 </div>
+                <div class="w-1/4">Card 3 -  4</div>
+                <div class="w-1/4">Card 4 - 4</div>
             </div>
+
+
         </div>
     </div>
 </div>
