--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -185,16 +185,19 @@
 
 <!-- ELEMENT 4 four cards -->
 
-<div class="container px-5 ">
-    <div class="row gx-5 align-items-center justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <p class="section-header-title-small">
-                    {{ element_4.cards_header_title_small }}
-                </p>
-                <p class="section-header-title">
-                    {{ element_4.cards_header_title }}
-                </p>
+
+<div class="w-full flex justify-center ">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
+                    <h5 class="section-header-title-small">
+                         {{ element_4.cards_header_title_small }}
+                    </h5>
+                    <h2 id="how-does-the-data-deposition-work" class="section-header-title">
+                         {{ element_4.cards_header_title }}                        
+                    </h2>
+                </div>
             </div>
         </div>
     </div>
