--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -205,36 +205,41 @@
 
 
 
+<div class="w-full flex justify-center ">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <!-- inner row -->
+            <div class="flex flex-nowrap gap-6">
+                <!-- card 1 -->
+                <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        card 1
+                    </div>
+                </div>
 
-<!-- inner row -->
-<div class="flex flex-nowrap gap-6">
-  <!-- card 1 -->
-  <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
-    <div class="h-full shadow bg-white flex flex-col border-0">
-      card 1
-    </div>
-  </div>
+                <!-- card 2 -->
+                <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        card 2
+                    </div>
+                </div>
 
-  <!-- card 2 -->
-  <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
-    <div class="h-full shadow bg-white flex flex-col border-0">
-      card 2
-    </div>
-  </div>
+                <!-- card 3 -->
+                <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        card 3
+                    </div>
+                </div>
 
-  <!-- card 3 -->
-  <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
-    <div class="h-full shadow bg-white flex flex-col border-0">
-      card 3
+                <!-- card 4 -->
+                <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+                    <div class="h-full shadow bg-white flex flex-col border-0">
+                        card 4
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-
-  <!-- card 4 -->
-  <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
-    <div class="h-full shadow bg-white flex flex-col border-0">
-      card 4
-    </div>
-  </div>
 </div>
 
 
