--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -213,28 +213,112 @@
                 <!-- card 1 -->
                 <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
                     <div class="h-full shadow bg-white flex flex-col border-0">
-                        card 1
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left">
+                                    {{ element_4.card_1_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 <!-- card 2 -->
                 <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
                     <div class="h-full shadow bg-white flex flex-col border-0">
-                        card 2
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left">
+                                    {{ element_4.card_1_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 <!-- card 3 -->
                 <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
                     <div class="h-full shadow bg-white flex flex-col border-0">
-                        card 3
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left">
+                                    {{ element_4.card_1_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 <!-- card 4 -->
                 <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
                     <div class="h-full shadow bg-white flex flex-col border-0">
-                        card 4
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left">
+                                    {{ element_4.card_1_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
