--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -209,9 +209,9 @@
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <!-- inner row -->
-            <div class="flex flex-nowrap gap-6">
+            <div class="flex flex-nowrap gap-6 container-w980">
                 <!-- card 1 -->
-                <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+                <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 mb-12">
                     <div class="h-full shadow bg-white flex flex-col border-0">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
@@ -239,7 +239,7 @@
                 </div>
 
                 <!-- card 2 -->
-                <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+                <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 mb-12">
                     <div class="h-full shadow bg-white flex flex-col border-0">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
@@ -267,7 +267,7 @@
                 </div>
 
                 <!-- card 3 -->
-                <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+                <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 mb-12">
                     <div class="h-full shadow bg-white flex flex-col border-0">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
@@ -295,7 +295,7 @@
                 </div>
 
                 <!-- card 4 -->
-                <div class="flex-none basis-[calc((100%-1.5rem*3)/4)] min-w-0">
+                <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 mb-12">
                     <div class="h-full shadow bg-white flex flex-col border-0">
                         <div class="h-full shadow bg-white flex flex-col border-0">
                             <img
