--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -204,7 +204,7 @@
 
 
 
-<div class="w-full flex justify-center ">
+<div class="w-full flex justify-center pb-[100px] ">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <!-- inner row -->
