--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -186,7 +186,7 @@
 <!-- ELEMENT 4 four cards -->
 
 <div class="w-full flex justify-center bg-white">
-    <div class="grid grid-cols-6 gap-4">
+    <div class="grid grid-cols-6 gap-4 w-full">
         <div class="col-span-4 col-start-2">
             <div class="w-full">
                 <div class="my-12 text-center">
